# concat-example

./: .travis.yml  build.sh
concat/: CMakeLists.txt
concat/concat/: main.cpp
